# filesync

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  main.cpp
